[gd_scene load_steps=2 format=3 uid="uid://utawede35f45"]

[ext_resource type="Script" uid="uid://m30547dcc0gg" path="res://src/RaceController.gd" id="1_e2ha0"]

[node name="RaceController" type="Node"]
script = ExtResource("1_e2ha0")
total_laps = 1

[node name="RaceOverTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="RaceOverTimer" to="." method="_on_race_over_timer_timeout"]
